[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/board.png" type="Texture" id=1]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/ships/01-Pinnace.png" type="Texture" id=4]
[ext_resource path="res://assets/images/sellbtn.png" type="Texture" id=5]
[ext_resource path="res://assets/images/sellbtn-hover.png" type="Texture" id=6]
[ext_resource path="res://assets/images/buybtn-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buybtn.png" type="Texture" id=8]
[ext_resource path="res://assets/images/btn.png" type="Texture" id=9]
[ext_resource path="res://assets/images/btn-hover.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/images/gold-coins.png" type="Texture" id=12]
[ext_resource path="res://prefabs/shipyard_window/ShipyardWindow.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[node name="ShipyardWindow" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 13 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 1.9993, -8.5 )
scale = Vector2( 0.781709, 0.726027 )
texture = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 4, 323 )
scale = Vector2( 0.779562, 0.922844 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -159.0
margin_top = -29.0
margin_right = 155.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Shipyard"
align = 1
valign = 1

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -264.0
margin_top = -36.0
margin_right = 269.0
margin_bottom = 21.0
hint_tooltip = "Buy new ships"

[node name="Content" type="Node2D" parent="."]

[node name="ShipImg" type="Sprite" parent="Content"]
position = Vector2( 0, 181 )
texture = ExtResource( 4 )

[node name="ShipNameBg" type="ColorRect" parent="Content"]
margin_left = -140.0
margin_top = 37.0
margin_right = 140.0
margin_bottom = 77.0
color = Color( 0, 0, 0, 0.627451 )

[node name="ShipNameLabel" type="Label" parent="Content"]
margin_left = -140.0
margin_top = 37.0
margin_right = 140.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Ship name"
align = 1
valign = 1

[node name="Navigation" type="Node2D" parent="Content"]
position = Vector2( 0, 337 )
__meta__ = {
"_edit_group_": true
}

[node name="NavNumberBg" type="ColorRect" parent="Content/Navigation"]
margin_left = -38.0
margin_top = -3.0
margin_right = 41.0
margin_bottom = 37.0
color = Color( 0, 0, 0, 0.627451 )

[node name="NavNumber" type="Label" parent="Content/Navigation"]
margin_left = -38.0
margin_top = -3.0
margin_right = 41.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "1/11"
align = 1
valign = 1

[node name="LeftBtn" type="TextureButton" parent="Content/Navigation"]
margin_left = -185.0
margin_right = -50.0
margin_bottom = 37.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="RightBtn" type="TextureButton" parent="Content/Navigation"]
margin_left = 53.0
margin_right = 188.0
margin_bottom = 37.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="Buy" type="Node2D" parent="Content"]
position = Vector2( -73, 564 )
__meta__ = {
"_edit_group_": true
}

[node name="BuyBtn" type="TextureButton" parent="Content/Buy"]
margin_right = 157.0
margin_bottom = 35.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Label" type="Label" parent="Content/Buy"]
margin_left = 2.0
margin_right = 155.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Buy"
align = 1
valign = 1

[node name="Cost" type="Node2D" parent="Content"]

[node name="CostLabelBg" type="ColorRect" parent="Content/Cost"]
margin_left = -140.0
margin_top = 285.0
margin_right = 140.0
margin_bottom = 325.0
color = Color( 0, 0, 0, 0.627451 )

[node name="GoldCoins" type="Sprite" parent="Content/Cost"]
position = Vector2( -114, 305 )
scale = Vector2( 0.659091, 0.659091 )
texture = ExtResource( 12 )

[node name="CostLabel" type="Label" parent="Content/Cost"]
margin_left = -92.0
margin_top = 287.0
margin_right = 136.0
margin_bottom = 322.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "160000"
valign = 1

[node name="Desc" type="Node2D" parent="Content"]
position = Vector2( 0, 389 )

[node name="Bg" type="ColorRect" parent="Content/Desc"]
margin_left = -110.0
margin_right = 120.0
margin_bottom = 164.0
color = Color( 0, 0, 0, 0.627451 )

[node name="HpLabel" type="Label" parent="Content/Desc"]
margin_left = -73.0
margin_top = 6.0
margin_right = 4.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Status:"
valign = 1

[node name="CrewLabel" type="Label" parent="Content/Desc"]
margin_left = -58.0
margin_top = 35.0
margin_right = 4.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Crew:"
valign = 1

[node name="CargoLabel" type="Label" parent="Content/Desc"]
margin_left = -67.0
margin_top = 64.0
margin_right = 4.0
margin_bottom = 99.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cargo:"
valign = 1

[node name="SpeedLabel" type="Label" parent="Content/Desc"]
margin_left = -69.0
margin_top = 92.0
margin_right = 4.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Speed:"
valign = 1

[node name="UpkeepLabel" type="Label" parent="Content/Desc"]
margin_left = -86.0
margin_top = 120.0
margin_right = 4.0
margin_bottom = 155.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "Upkeep:"
valign = 1

[node name="HpValue" type="Label" parent="Content/Desc"]
margin_left = 5.0
margin_top = 8.0
margin_right = 63.0
margin_bottom = 43.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1

[node name="CrewValue" type="Label" parent="Content/Desc"]
margin_left = 5.0
margin_top = 37.0
margin_right = 63.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "40"
align = 2
valign = 1

[node name="CargoValue" type="Label" parent="Content/Desc"]
margin_left = 5.0
margin_top = 66.0
margin_right = 63.0
margin_bottom = 101.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1

[node name="SpeedValue" type="Label" parent="Content/Desc"]
margin_left = 5.0
margin_top = 94.0
margin_right = 63.0
margin_bottom = 129.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1

[node name="UpkeepValue" type="Label" parent="Content/Desc"]
margin_left = 5.0
margin_top = 122.0
margin_right = 63.0
margin_bottom = 157.0
custom_colors/font_color = Color( 0.960784, 0.905882, 0.72549, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 2
valign = 1

[connection signal="button_up" from="Content/Navigation/LeftBtn" to="." method="_on_LeftBtn_button_up"]
[connection signal="button_up" from="Content/Navigation/RightBtn" to="." method="_on_RightBtn_button_up"]
[connection signal="button_up" from="Content/Buy/BuyBtn" to="." method="_on_BuyBtn_button_up"]
